fixed missing cursor pointer in results list on recon portal, fixed y overflow when multiple data sets present, check out hurricane Harvey

--- a/designsafe/apps/rapid/static/designsafe/apps/rapid/styles/rapid.css
+++ b/designsafe/apps/rapid/static/designsafe/apps/rapid/styles/rapid.css
@@ -56,6 +56,7 @@ body {
 
 .fade {
   opacity:1;
+  overflow-y: scroll;
 }
 
 #sidebar {
@@ -239,6 +240,10 @@ body {
   /*border-bottom: 1px solid #d2d2d2;*/
   padding-top: 2px;
   padding-bottom: 2px;
+}
+
+.event-listing {
+  cursor: pointer;
 }
 
 
